# vasanth-experiments

./: .dockerignore  .gitignore  DOCKER_DEPLOYMENT.md  docker-compose.yml  docker-run.sh
data/youtube_chroma_db/: chroma.sqlite3
forecasting-model/: .env.example  .gitignore  Makefile  POETRY_MIGRATION.md  README.md  horizons.py  pyproject.toml
forecasting-model/notebooks/: model_report_summary.md
gan-model/: Makefile  README.md  requirements.txt
gan-model/data/: README.md
gan-model/models/: README.md
gan-model/notebooks/: cnn_image_classification.ipynb  image_generation_gan.ipynb
gan-model/utils/: __init__.py  image_utils.py  visualization.py
model-dashboard/: Dockerfile  README.md  nginx.conf  package.json
model-dashboard/public/: index.html
model-dashboard/src/: App.js  index.js
model-dashboard/src/components/: Header.js  Sidebar.js
model-dashboard/src/pages/: Dashboard.js  ObjectDetection.js  TemperaturePrediction.js
model-dashboard/src/services/: api.js
model-service/: .dockerignore  .env.example  DOCKER.md  Dockerfile  README.md  build.sh  deploy.sh  docker-compose.prod.yml  docker-compose.yml  docker-run.sh  main-docker.py  main.py  nginx.conf  pyproject.toml  requirements-simple.txt  requirements.txt  test_main.py  test_youtube_service.py  youtube_analyzer_wrapper.py
object-detection-model/: .gitignore  Makefile  PROJECT_SUMMARY.md
object-detection-model/data/: .gitkeep
object-detection-model/notebooks/: object_detection_analysis.ipynb
object-detection-model/results/: .gitkeep
object-detection-model/results/comparisons/: .gitkeep
object-detection-model/results/detections/: .gitkeep
object-detection-model/results/reports/: .gitkeep
object-detection-model/utils/: detection_utils.py  setup_sample_data.py
sales-prediction-model/: README.md  requirements.txt
sales-prediction-model/notebooks/: 01_ARIMA_Sales_Prediction.ipynb  ADF_Test_Validation.ipynb
sales-prediction-model/utils/: data_generator.py  data_preprocessing.py  model_evaluation.py  visualization.py
shared-models/: create_models.py  export_forecasting_model.py  export_object_detection_model.py  export_youtube_analyzer.py  youtube_analyzer_standalone.py
shared-models/data/chroma_db/: chroma.sqlite3
tsf-experiments/: Makefile  README.md  requirements.txt
tsf-experiments/notebooks/: adf_test_analysis.ipynb  ar1_model_analysis.ipynb
youtube-video-analyser-model/: .env.example  .gitignore  LICENSE  Makefile  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  setup.sh  test_installation.py
youtube-video-analyser-model/examples/: advanced_usage.py  basic_usage.py  notebook_example.py
youtube-video-analyser-model/notebooks/: export_notebook.py  youtube-video-analyser.html  youtube-video-analyser.ipynb  youtube_analyzer_interactive.ipynb
youtube-video-analyser-model/src/youtube_analyzer/: __init__.py  analyzer.py  cli.py
youtube-video-analyser-model/src/youtube_analyzer/config/: __init__.py  settings.py
youtube-video-analyser-model/src/youtube_analyzer/core/: __init__.py  chunker.py  embedder.py  retriever.py  summarizer.py  transcript_fetcher.py
youtube-video-analyser-model/src/youtube_analyzer/utils/: __init__.py  helpers.py
youtube-video-analyser-model/tests/: test_analyzer.py
