[tool.poetry]
name = "model-service"
version = "1.0.0"
description = "FastAPI service for temperature forecasting and object detection models"
authors = ["Vasanth <vasanth@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.0.0"
numpy = "^1.24.0"
pillow = "^10.0.0"
python-multipart = "^0.0.6"
# YouTube Analyzer dependencies
youtube-transcript-api = "^0.6.0"
langchain = "^0.0.350"
langchain-community = "^0.0.10"
langchain-text-splitters = "^0.0.1"
chromadb = "^0.4.15"
sentence-transformers = "^2.2.2"
torch = "^2.1.0"
groq = "^0.4.0"
openai = "^1.0.0"
pandas = "^2.0.0"
tqdm = "^4.66.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
httpx = "^0.25.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88