[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "youtube-video-analyser-model"
version = "0.1.0"
description = "RAG pipeline to summarize YouTube videos using transcript analysis and semantic chunking"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "youtube_analyzer", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
youtube-transcript-api = "^0.6.2"
langchain = "^0.1.0"
langchain-community = "^0.0.10"
langchain-text-splitters = "^0.0.1"
chromadb = "^0.4.18"
sentence-transformers = "^2.2.2"
transformers = "^4.36.0"
torch = "^2.1.0"
spacy = "^3.7.0"
groq = "^0.4.1"
openai = "^1.6.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
requests = "^2.31.0"
tqdm = "^4.66.0"
numpy = "^1.24.0"
pandas = "^2.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.12.0"
flake8 = "^6.1.0"
mypy = "^1.8.0"
pre-commit = "^3.6.0"
jupyter = "^1.0.0"

[tool.poetry.scripts]
youtube-analyzer = "youtube_analyzer.cli:main"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true